syntax = "proto3";

option csharp_namespace = "SistemaBlueddit.Server";

package topics;

service Topics {
  rpc GetTopics(GetTopicByNameRequest) returns (JsonResponse);
}

message GetTopicByNameRequest {
  string topicName = 1;
}

message JsonResponse {
  string json = 1;
}

message Empty { }